@@ -93,6 +93,9 @@ struct game {
   char *dir;
   char *real_dir;
 
+  /** called when either cmd or dir have changed. Also on xqf startup */
+  void (*cmd_or_dir_changed)(struct game* g);
+
   /** built in default game specific home directory */
   char *default_home;
 
