@@ -1,3 +1,6 @@
+Oct 02, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- automatically detect the doom3 network protocol version
+
 Sep 26, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - add support for gslist
 - drop broken master servers, add some new ones for quake2
